phase3/k8s/demo_devops/environments/staging/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-frontend-staging
  namespace: demo-apps
  labels:
    app: demo-app-frontend-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app-frontend-staging
  template:
    metadata:
      labels:
        app: demo-app-frontend-staging
    spec:
      containers:
        - name: demo-app
          image: aadinnr/demo_devops:frontend
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: config-vol
            mountPath: /etc/config
          - name: secret-vol
            mountPath: /etc/secret
      volumes:
      - name: config-vol
        configMap:
          name: demo-app-config
      - name: secret-vol
        secret:
          secretName: demo-app-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-backend-staging
  namespace: demo-apps
  labels:
    app: demo-app-backend-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app-backend-staging
  template:
    metadata:
      labels:
        app: demo-app-backend-staging
    spec:
      containers:
        - name: demo-app
          image: aadinnr/demo_devops:backend
          ports:
            - containerPort: 8000
