phase3/k8s/demo_devops/environments/staging/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-frontend-svc
  namespace: demo-apps
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app-frontend-staging
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-backend-svc
  namespace: demo-apps
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app-backend-staging
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
